# Phone-Book

./: conctact.txt  contact_book.py  contact_book_v2.py  contacts.txt  phone_book.txt  postgre_conn.py  server-ca.pem  sql_conn.py.py
old_files/: contact.py  contact_book.py
old_files/PhoneBook_v1/: CMakeLists.txt  PhoneBook_v1.qmlproject  PhoneBook_v1.qmlproject.qtds  create_new_contact.py  main.py  qmlmodules  save_contact.py
old_files/PhoneBook_v1/content/: App.qml  Screen01.ui.qml
old_files/PhoneBook_v1/imports/: CMakeLists.txt
old_files/PhoneBook_v1/imports/PhoneBook_v1/: CMakeLists.txt  qmldir
old_files/PhoneBook_v1/imports/PhoneBook_v1/designer/: plugin.metainfo
old_files/PhoneBook_v1/src/: app_environment.h  import_qml_plugins.h
